worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 </span>
                         </div>
                         <div class="photo">
-                            <img src="assest/feed-1.jpg">
+                            <img src="assest/feed-2.jpg">
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
@@ -313,7 +313,7 @@
                 </span>
                         </div>
                         <div class="photo">
-                            <img src="assest/feed-1.jpg">
+                            <img src="assest/feed-3.jpg">
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
@@ -363,7 +363,7 @@
                 </span>
                         </div>
                         <div class="photo">
-                            <img src="assest/feed-1.jpg">
+                            <img src="assest/feed-4.jpg">
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
@@ -413,7 +413,7 @@
                 </span>
                         </div>
                         <div class="photo">
-                            <img src="assest/feed-1.jpg">
+                            <img src="assest/feed-5.jpg">
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
@@ -464,7 +464,7 @@
                 </span>
                         </div>
                         <div class="photo">
-                            <img src="assest/feed-1.jpg">
+                            <img src="assest/feed-6.jpg">
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
@@ -503,7 +503,7 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                    <img src="assest/profile-13.jpg">
+                                    <img src="assest/profile-8.jpg">
                                 </div>
                                 <div class="info">
                                     <h3>Joan Ebere</h3>
@@ -515,7 +515,7 @@
                 </span>
                         </div>
                         <div class="photo">
-                            <img src="assest/feed-1.jpg">
+                            <img src="assest/feed-7.jpg">
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
@@ -559,7 +559,7 @@
 
             <!-- =======RIGHT======= -->
 
-            <div class="right">
+            <div class="right" id="right">
                 <div class="messages">
                     <div class="heading">
                         <h4>Messages</h4><i class="uil uil-edit"></i>
@@ -665,13 +665,106 @@
 
                     </div>
 
+                    <div class="request">
+                        <div class="info">
+
+                            <div class="profile-photo">
+                                <img src="assest/profile-14.jpg" alt="">
+                            </div>
+                            <h5>CTO PMT Tech</h5>
+                            <p class="text-muted">
+                                6 mutual friends
+                            </p>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                    Accept
+                                </button>
+                            <button class="btn">
+                                    Decline
+                                </button>
+                        </div>
+
+                    </div>
+                    <div class="request">
+                        <div class="info">
+
+                            <div class="profile-photo">
+                                <img src="assest/profile-20.jpg" alt="">
+                            </div>
+                            <h5>Chetachi</h5>
+                            <p class="text-muted">
+                                19 mutual friends
+                            </p>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                    Accept
+                                </button>
+                            <button class="btn">
+                                    Decline
+                                </button>
+                        </div>
+
+                    </div>
 
                 </div>
 
             </div>
-        </div>
+            <!-- ============END OF RIGHT========= -->
 
-
+            <!-- THEME CUSTOMIZATION -->
+            <div class="customize-theme">
+                <div class="card">
+                    <h2>Customize your view</h2>
+                    <p class="text-muted">Manage your font size, color and background</p>
+                    <!-- FONT SIZES -->
+                    <div class="font-size">
+                        <h4>Font Size</h4>
+                        <div>
+                            <h6>Aa</h6>
+                            <div class="choose-size">
+                                <span class="font-size-1"></span>
+                                <span class="font-size-2 active"></span>
+                                <span class="font-size-3"></span>
+                                <span class="font-size-4"></span>
+                                <span class="font-size-5"></span>
+                            </div>
+                            <h3>Aa</h3>
+                        </div>
+                    </div>
+                    <!-- PRIMARY COLORS -->
+                    <div class="color">
+                        <h4>Color</h4>
+                        <div class="choose-color">
+                            <span class="color-1 active"></span>
+                            <span class="color-2"></span>
+                            <span class="color-3"></span>
+                            <span class="color-4"></span>
+                            <span class="color-5"></span>
+                        </div>
+                    </div>
+                    <!-- BACKGROUND COLORS -->
+                    <div class="background">
+                        <h4>Bacground</h4>
+                        <div class="choose-bg">
+                            <div class="bg-1 active">
+                                <span></span>
+                                <h5 for "bg-1">Light</h5>
+                            </div>
+                            <div class="bg-2">
+                                <span></span>
+                                <h5>Dim</h5>
+                            </div>
+                            <div class="bg-3">
+                                <span></span>
+                                <h5 for "bg-3">Lights out</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- END OF THEME CUSTOMIZATION -->
     </main>
 
 
