--- a/index.html
+++ b/index.html
@@ -756,10 +756,10 @@
                                 <span></span>
                                 <h5>Dim</h5>
                             </div>
-                            <div class="bg-3">
+                            <!-- <div class="bg-3">
                                 <span></span>
                                 <h5 for "bg-3">Lights out</h5>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
